--- a/src/less/layouts.less
+++ b/src/less/layouts.less
@@ -5,6 +5,10 @@ body {
     overflow: hidden;
   }
 }
+.disabled {
+  pointer-events: 'none';
+  opacity: .5;
+}
 .bns_inner_block {
   width: 100%;
   box-sizing: border-box;
