--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,6 @@
 // basic url adress
-@burl: "../img/";
+@burl: "src/img/";
+@import url('https://fonts.googleapis.com/css?family=Exo+2:300,400,700,700i&subset=cyrillic');
 
 // for all page
 @import "layouts.less";
