--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -3,10 +3,25 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 166, 225, 0.87);
-  display: none;
   text-align: center;
+  left: -9999px;
+  top: 0;
+  opacity: 0;
   z-index: 11111;
   overflow-y: auto;
+  transition: left 0s linear .2s, opacity .2s ease-out;
+
+  &.show {
+    left: 0;
+    opacity: 1;
+    transition: left 0s linear, opacity .2s ease-out;
+    
+    .bns_overlay_iner {
+      transform: translateY(0);
+      opacity: 1
+    }
+  }
+
   &:before {
     content: '';
     display: inline-block;
@@ -43,6 +58,10 @@
     text-align: left;
     position: relative;
     border-radius: 10px;
+    transform: translateY(-50px);
+    opacity: 0;
+    transition: transform .5s ease-out, opacity .5s ease-out;
+
     h3 {
       font-size: 20px;
       float: left;
@@ -146,7 +165,7 @@
     width: 420px;
     font-weight: 300;
   }
-  .bns_hist_table td:nth-child(2) span {
+  .bns_hist_table span.blue {
     display: block;
     position: relative;
     z-index: 1;
@@ -330,6 +349,9 @@
       font-size: 16px;
       font-weight: 300;
       max-width: 296px;
+      &.error {
+        border-color: red;
+      }
       &.bns_input_block_d {
         width: 83px;
         margin-right: 10px;
