--- a/src/less/achiv.less
+++ b/src/less/achiv.less
@@ -25,6 +25,8 @@
       }
     }
     img {
+      width: 171px;
+      height: 161px;
       margin-top:5px;
       -webkit-filter: grayscale(100%);
       -moz-filter: grayscale(100%);
