--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -144,50 +144,7 @@
                         params: { slides: slider_items }
                     }"></div>
             </div>
-            <div class="bns_info_right">
-                <div class="bns_info_mount">
-                    <div class="bns_info_mount_item ">
-                        <img src="src/img/m_ic5.png" alt="">
-                        <div class="bns_info_mount_item_info">
-                            <span class="bns_info_mount_item_name">Легенда</span>
-                            <span class="bns_info_mount_item_text">Вы — лидер!</span>
-                            <a href="#" class="bns_info_mount_item_linck">Подробнее</a>
-                        </div>
-                    </div>
-                    <div class="bns_info_mount_item act">
-                        <img src="src/img/m_ic4.png" alt="">
-                        <div class="bns_info_mount_item_info">
-                            <span class="bns_info_mount_item_name">Чемпион</span>
-                            <span class="bns_info_mount_item_text">Осталось немного</span>
-                            <a href="#" class="bns_info_mount_item_linck">Подробнее</a>
-                        </div>
-                    </div>
-                    <div class="bns_info_mount_item ">
-                        <img src="src/img/m_ic3.png" alt="">
-                        <div class="bns_info_mount_item_info">
-                            <span class="bns_info_mount_item_name">Вице-чемпион</span>
-                            <span class="bns_info_mount_item_text">Вас не остановить</span>
-                            <a href="#" class="bns_info_mount_item_linck">Подробнее</a>
-                        </div>
-                    </div>
-                    <div class="bns_info_mount_item ">
-                        <img src="src/img/m_ic2.png" alt="">
-                        <div class="bns_info_mount_item_info">
-                            <span class="bns_info_mount_item_name">Легенда</span>
-                            <span class="bns_info_mount_item_text">Вы — лидер!</span>
-                            <a href="#" class="bns_info_mount_item_linck">Подробнее</a>
-                        </div>
-                    </div>
-                    <div class="bns_info_mount_item ">
-                        <img src="src/img/m_ic1.png" alt="">
-                        <div class="bns_info_mount_item_info">
-                            <span class="bns_info_mount_item_name">Участник</span>
-                            <span class="bns_info_mount_item_text">Добро пожаловать</span>
-                            <a href="#" class="bns_info_mount_item_linck">Подробнее</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="bns_info_right" data-bind="component: 'ko-status'"></div>
         </div>
 
         <div class="btn_tab_main" data-bind="component: {
