--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -1,3 +1,39 @@
+.select-style {
+    margin: 0;
+    overflow: hidden;
+
+    padding: 0px 10px;
+    box-sizing: border-box;
+    border-radius: 6px;
+    border: 1px solid #c2c1c0;
+    height: 43px;
+    color: #000;
+    float: left;
+    margin-right: 10px;
+    font-size: 16px;
+    font-weight: 300;
+    max-width: 296px;
+    background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 90% 50%;
+}
+
+.select-style select {
+    padding: 0 8px;
+    line-height: 42px;
+    width: 130%;
+    font-size: 16px;
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+    background-image: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+}
+
+.select-style select:focus {
+    outline: none;
+}
+
 .bns_overlay {
   position: fixed;
   width: 100%;
