--- a/src/components/templates/status.template.html
+++ b/src/components/templates/status.template.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="koStatus">
     <div class="bns_info_mount" data-bind="foreach: statuses">
-        <div class="bns_info_mount_item" data-bind="css: { act: $parent.isActive($data) }">
+        <div class="bns_info_mount_item" data-bind="css: { act: $parent.isActive($data, $index) }">
             <img data-bind="attr: { src: thumbs.url_250x250 }" width="70" height="73" alt="">
             <div class="bns_info_mount_item_info">
                 <span class="bns_info_mount_item_name" data-bind="text: name"></span>
