--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -1,3 +1,34 @@
+.bns_gift_popup_header {
+  text-align: center;
+}
+
+.bns_gift_popup {
+  text-align: center;
+}
+
+.bns_gift_popup_btn {
+    float: left;
+    width: 100%;
+    line-height: 42px;
+    max-width: 296px;
+    margin-top: 10px;
+    background: #007bc6;
+    background: -moz-linear-gradient(left, #007bc6 0%, #00a3d7 100%);
+    background: -webkit-linear-gradient(left, #007bc6 0%, #00a3d7 100%);
+    background: linear-gradient(to right, #007bc6 0%, #00a3d7 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007bc6', endColorstr='#00a3d7', GradientType=1);
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.bns_gift_popup_points {
+  color: #00a6e1
+}
+
 .select-style {
     margin: 0;
     overflow: hidden;
@@ -13,7 +44,21 @@
     font-size: 16px;
     font-weight: 300;
     max-width: 296px;
-    background: #fff url("http://www.scottgood.com/jsg/blog.nsf/images/arrowdown.gif") no-repeat 90% 50%;
+    position: relative;
+
+    &.selected {
+      &:before {
+        display: none;
+      }
+    }
+    &:before {
+      top: 10px;
+      pointer-events: none;
+      content: 'Месяц';
+      display: block;
+      position: absolute;
+      color: darkgray;
+    }
 }
 
 .select-style select {
@@ -372,6 +417,11 @@
       float: left;
       width: 100%;
       margin-bottom: 3px;
+    }
+    .select-style {
+      &.error {
+        border-color: red;
+      }
     }
     input[type="text"] {
       float: left;
