--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -1,3 +1,13 @@
+.left {
+  float: left !important;
+  width: 30% !important;
+}
+
+.right {
+  width: 45% !important;
+  float: right !important;
+}
+
 .bns_gift_popup_header {
   text-align: center;
 }
@@ -33,13 +43,14 @@
     margin: 0;
     overflow: hidden;
 
-    padding: 0px 10px;
+    padding: 0px 8px;
     box-sizing: border-box;
     border-radius: 6px;
     border: 1px solid #c2c1c0;
     height: 43px;
     color: #000;
     float: left;
+    width: 110px;
     margin-right: 10px;
     font-size: 16px;
     font-weight: 300;
